fix: exported fastmart_init

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,3 +4,4 @@ export(fastmart_annotate_biotype)
 export(fastmart_cache_tables)
 export(fastmart_convert_hgnc_to_ensembl)
 export(fastmart_default_cache)
+export(fastmart_init)
